# bionty-assets

./: .gitignore  .pre-commit-config.yaml  README.md  lamin-project.yaml  noxfile.py  pyproject.toml
.github/workflows/: build.yml
bionty_assets/: __init__.py  _io.py
docs/: api.md  changelog.md  index.md
docs/guides/: index.md  ontology-managers.ipynb
docs/ingest/: 2022-06-24-ebi-gene-set.ipynb  2022-06-25-obo-mondo-owl.ipynb  2022-06-27-obo-cell-owl.ipynb  2022-06-29-uniprot-ids.ipynb  2022-08-17-ensembl-gene-ids.ipynb  2022-08-26-cell-marker.ipynb  2022-08-26-uniprot.ipynb  2022-09-26-cell-marker.ipynb  2022-09-26-ensembl-gene.ipynb  2022-09-26-uniprot-protein.ipynb  2022-09-27-ensembl-gene-v2.ipynb  biosample-ncbi-2023-09.ipynb  cell-marker-2.0.ipynb  cell-marker-human.ipynb  cell_line-clo-2022-03.ipynb  cell_line-depmap-2024-Q2.ipynb  connect-to-db.ipynb  drug-chebi-2024-07-27.ipynb  ensembl-gene.ipynb  ensembl-species.ipynb  ensembl_versions_statistics.ipynb  gene-ensembl-plant-release-57.ipynb  gene-ensembl-release-109.ipynb  gene-ensembl-release-110.ipynb  gene-ensembl-release-111.ipynb  gene-ensembl-release-112.ipynb  gene-plants-ensembl-release-57.ipynb  icd-10-2024-04.ipynb  icd-11-2023-01.ipynb  index.md  initial-lamindb-instance.ipynb  laminlabs-bionty-assets.ipynb  organism-ncbitaxon-2023-06-20.ipynb  organism-ncbitaxon-2025-03-13.ipynb  plant-gene-ensembl-release-57.ipynb  protein-uniprot-2023-02.ipynb  protein-uniprot-2023-03.ipynb  protein-uniprot-2024-03.ipynb  uniprot-protein.ipynb
docs/notes/: cell-marker-human.ipynb  (+18 more)
tests/: test_notebooks.py
