[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bionty_assets"
authors = [{name = "Lamin Labs", email = "laminlabs@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "nbproject",
    "pyarrow",
    "pandas",
]

[project.urls]
Home = "https://github.com/laminlabs/bionty-assets"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "nox",
]
test = [
    "pytest>=6.0",
    "nbmake",
    "pronto",
    "owlready2",
]

[tool.black]
preview = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "docs/guides",
    "docs/tutorial",
]
